# tref

./: .gitignore  MANIFEST.in  README.md  Readme.md  go.mod  main.go  mian.go  pyproject.toml  requirements.txt  setup.cfg  test.py  test2.py
.github/workflows/: build-indexes.yml  ci.yml
defaultCheatsheets/: curl.json  devtools.json  docker.json  git.json  nmap.json
docs/: architecture.md  building.md  how-it-works.md  installation.md  interface.md  kb_schema_v2.md  nlp-usage.md
kb/: _manifest.json
kb/algorithms/1.0/api/: algorithms.binary_search.md  algorithms.quicksort.md  binary_search.md  bubble_sort.md
kb/aws_cli/2/api/: aws.ec2.md  aws.s3.md
kb/curl/7.81/api/: curl.http.md
kb/django/4.2/api/: django.views.md
kb/django/5.0/api/: django.models.md
kb/docker/20/api/: docker.build.md  docker.exec.md  docker.logs.md  docker.ps.md  docker.pull.md
kb/docker/24/api/: docker.compose.up.md
kb/docker/26.1/api/: docker.run.md
kb/elasticsearch/7/api/: elasticsearch.search.md
kb/express/4/api/: express.express.md
kb/fastapi/0.100/api/: fastapi.FastAPI.md
kb/git/2.40/api/: git.commit.md  git.diff.md  git.log.md  git.pull.md  git.push.md  git.rebase.md  git.stash.md
kb/git/2.42/api/: git.merge.md
kb/git/2.44/api/: git.branch.md  git.rebase.md
kb/go/1.20/api/: go.goroutine.md
kb/go/1.22/api/: go.range_over_int.md
kb/helm/3/api/: helm.install.md
kb/javascript/ES2021/api/: javascript.array_methods.md
kb/jest/28/api/: jest.test.md
kb/jest/29/api/: jest.spyOn.md
kb/kubernetes/1.27/api/: kubectl.apply.md  kubectl.port_forward.md
kb/kubernetes/1.30/api/: kubectl.get.md
kb/mongodb/5/api/: mongodb.find.md
kb/mongodb/6/api/: mongodb.aggregate.md
scripts/: build_index.py  full_eval.sh  golden_queries.json  regression_eval.py  validate_kb.py
tref/: __init__.py  __main__.py  api.py  cheatsheet.py  cli.py  config.py  embeddings.py  errors.py  indexer.py  kb.py  models.py  retrieval.py  search.py  updater.py
tref/defaultCheatsheets/: kubectl.json  sed.json  tmux.json
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
website/docs/: tools.md
website/public/: architecture.md  interface.md
website/public/docs/: tools.md
website/src/: App.tsx  index.css
website/src/components/: FeatureCard.tsx  Footer.tsx  Header.tsx  TerminalDemo.tsx  TerminalHeader.tsx
website/src/pages/: Docs.tsx  Index.tsx
(+49 files in other folders)
